SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Google_Analytics_Content__c.field-meta.xml
<CustomField>
    <fullName>Google_Analytics_Content__c</fullName>
    <label>Google Analytics Content</label>
    <length>225</length>
    <type>Text</type>
</CustomField>