SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Google_Analytics_Source__c.field-meta.xml
<CustomField>
    <fullName>Google_Analytics_Source__c</fullName>
    <label>Google Analytics Source</label>
    <length>225</length>
    <type>Text</type>
</CustomField>