SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/H_Technical_Evaluation_POV_completed__c.field-meta.xml
<CustomField>
    <fullName>H_Technical_Evaluation_POV_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>milestone</description>
    <inlineHelpText>To check milestone H, customer must confirm decision criteria, decision process, executive buyer, budget, licensing needs and competition.</inlineHelpText>
    <label>H. Technical Evaluation/POV completed</label>
    <type>Checkbox</type>
</CustomField>