SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Have_they_bought_software_before__c.field-meta.xml
<CustomField>
    <fullName>Have_they_bought_software_before__c</fullName>
    <label>Have they bought software before?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>