SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/How_do_they_FF__c.field-meta.xml
<CustomField>
    <fullName>How_do_they_FF__c</fullName>
    <description>Please provide detail on how they FF</description>
    <inlineHelpText>Please provide detail on how they FF</inlineHelpText>
    <label>How do they FF?</label>
    <type>TextArea</type>
</CustomField>