SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/How_do_we_justify_our_cost__c.field-meta.xml
<CustomField>
    <fullName>How_do_we_justify_our_cost__c</fullName>
    <description>SMB pro plan</description>
    <label>How do we justify our cost?</label>
    <type>TextArea</type>
</CustomField>