SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/How_long_is_their_typical_Legal_process__c.field-meta.xml
<CustomField>
    <fullName>How_long_is_their_typical_Legal_process__c</fullName>
    <label>How long is their typical Legal process?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>