SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/How_often_would_they_like_to_release__c.field-meta.xml
<CustomField>
    <fullName>How_often_would_they_like_to_release__c</fullName>
    <label>How often would they like to release?</label>
    <length>55</length>
    <type>Text</type>
</CustomField>