SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/I_Info_secured_to_develop_proposal__c.field-meta.xml
<CustomField>
    <fullName>I_Info_secured_to_develop_proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>milestone</description>
    <label>J. Info secured to develop proposal</label>
    <type>Checkbox</type>
</CustomField>