SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Inactive_Products__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Products__c</fullName>
    <label>Inactive Products</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>