SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Incremental_ARR__c.field-meta.xml
<CustomField>
    <fullName>Incremental_ARR__c</fullName>
    <inlineHelpText>The Opportunity Incremental ARR is the change to the Account ARR or COMMISSIONABLE AMOUNT. For NB, it is the contract value. For expansion, this is the delta. For flat renewals, IARR is 0.</inlineHelpText>
    <label>Incremental ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>