SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Incremental_ARR_Check__c.field-meta.xml
<CustomField>
    <fullName>Incremental_ARR_Check__c</fullName>
    <formula>(Opportunity_ARR__c-ARR_up_for_Renewal__c)- Incremental_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental ARR Check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>