SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Internal_thank_yous__c.field-meta.xml
<CustomField>
    <fullName>Internal_thank_yous__c</fullName>
    <inlineHelpText>Include Support, Engineers, Finance, Legal and any other team members who were involved in this deal</inlineHelpText>
    <label>Internal thank yous</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>