SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Is_Experimentation_Included_in_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_Experimentation_Included_in_Contract__c</fullName>
    <description>Is Experimentation Included in Contract?</description>
    <inlineHelpText>Is Experimentation Included in Contract?</inlineHelpText>
    <label>Experimentation Included in Contract?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>