SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Is_Legal_involved__c.field-meta.xml
<CustomField>
    <fullName>Is_Legal_involved__c</fullName>
    <description>SMB pro plan</description>
    <label>Is Legal involved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>