SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Is_this_a_Reseller__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Reseller__c</fullName>
    <label>Is this a Reseller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>