SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Is_this_a_team_or_org_wide_initiative__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_team_or_org_wide_initiative__c</fullName>
    <label>Is this a team or org wide initiative?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>