SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>IF(
AND(today()&gt;= Effective_service_date__c , today()&lt;= Actual_service_end_date__c ),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>