SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/J_Customer_completed_a_BVA_or_BVA_lite__c.field-meta.xml
<CustomField>
    <fullName>J_Customer_completed_a_BVA_or_BVA_lite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>milestone</description>
    <label>I. Customer completed a BVA</label>
    <type>Checkbox</type>
</CustomField>