SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/JRS__c.field-meta.xml
<CustomField>
    <fullName>JRS__c</fullName>
    <description>Please enter a number between 1 and 100</description>
    <inlineHelpText>Please enter a number between 1 and 100</inlineHelpText>
    <label>JRS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>