SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/K_Customer_validated_LD_met_tech_reqs__c.field-meta.xml
<CustomField>
    <fullName>K_Customer_validated_LD_met_tech_reqs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>milestone</description>
    <label>K. Customer validated LD met tech req</label>
    <type>Checkbox</type>
</CustomField>