SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/L_Customer_validate_BVA_assessment__c.field-meta.xml
<CustomField>
    <fullName>L_Customer_validate_BVA_assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>milestone</description>
    <inlineHelpText>Pricing and value are aligned</inlineHelpText>
    <label>L. Customer validated BVA assessment</label>
    <type>Checkbox</type>
</CustomField>