SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Last_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Last Campaign from which the original converted Lead for this Opportunity is attributed to.</inlineHelpText>
    <label>Last Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities (Last Campaign)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>