SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Launch_Darkly_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Launch_Darkly_Billing_Email__c</fullName>
    <description>Where to send the invoice. ex. ap@microsoft.com</description>
    <inlineHelpText>Where to send the invoice.</inlineHelpText>
    <label>Accounts Payable Email</label>
    <type>Email</type>
</CustomField>