SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/LaunchDarkly_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>LaunchDarkly_Account_ID__c</fullName>
    <description>Account ID for LaunchDarkly account. Can be found in VitalStatistix.
ARCHIVED - use LD Account ID formula field instead</description>
    <externalId>true</externalId>
    <label>LaunchDarkly Account ID ARCHIVE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>