SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/LaunchDarklyAdminEmail__c.field-meta.xml
<CustomField>
    <fullName>LaunchDarklyAdminEmail__c</fullName>
    <description>Email Address in LaunchDarkly for the account that we wish to go live.</description>
    <label>LaunchDarklyAdminEmail</label>
    <type>Email</type>
</CustomField>