SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/LD_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>LD_Account_ID__c</fullName>
    <formula>Account.LD_Account_ID__c</formula>
    <inlineHelpText>Launchdarkly ID pulled from Account</inlineHelpText>
    <label>LD Account ID</label>
    <type>Text</type>
</CustomField>