SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/LD_Platform_Amount__c.field-meta.xml
<CustomField>
    <fullName>LD_Platform_Amount__c</fullName>
    <label>LD Platform Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>LD Platform Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>