SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age__c</fullName>
    <description>How many days it took the lead to convert into an opportunity</description>
    <formula>Opportunity_Created_Date__c - Lead_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days it took the lead to convert into an opportunity</inlineHelpText>
    <label>Lead Age (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>