SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category__c</fullName>
    <description>do not use</description>
    <formula>IF(
   AND(
       ISBLANK(Credited_BDR_lookup__c),
       ISBLANK(Credited_SDR__c),
       ISPICKVAL(Type, &quot;Expansion&quot;), 
       CONTAINS(CreatedBy.Profile.Name,&quot;Sales&quot;)), 
       &quot;Current Customer&quot;,

IF(
   AND(
       ISBLANK(Credited_BDR_lookup__c),
       ISBLANK(Credited_SDR__c),
       NOT(ISPICKVAL(Type, &quot;Expansion&quot;)), 
       CONTAINS(CreatedBy.Profile.Name,&quot;Sales&quot;)), 
       &quot;AE Outbound&quot;,

IF(
   AND(
       ISBLANK(Credited_BDR_lookup__c),
       ISBLANK(Credited_SDR__c),
       NOT(CONTAINS(CreatedBy.Profile.Name,&quot;Sales&quot;))),
       &quot;Inbound&quot;,

IF(
   AND(
       NOT(ISBLANK(Credited_BDR_lookup__c)),
       NOT(ISBLANK(Credited_SDR__c))),
       &quot;Inbound,Outbound&quot;,

IF(ISBLANK( Credited_SDR__c ),&quot;Outbound&quot;,
IF(ISBLANK( Credited_BDR_lookup__c ),&quot;Inbound&quot;,

NULL

))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Inbound/Outbound</inlineHelpText>
    <label>Lead Category - deprecated</label>
    <type>Text</type>
</CustomField>