SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date__c</fullName>
    <description>When the lead was created</description>
    <inlineHelpText>When the lead was created</inlineHelpText>
    <label>Lead Created Date</label>
    <type>DateTime</type>
</CustomField>