SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Lead_Source_1st_Touch__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_1st_Touch__c</fullName>
    <label>Lead Source 1st Touch</label>
    <length>225</length>
    <type>Text</type>
</CustomField>