SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <description>Please add any color on the primary contact&apos;s Lead source (e.g., which event they attended).</description>
    <inlineHelpText>Please add any color on the primary contact&apos;s Lead source (e.g., which event they attended).</inlineHelpText>
    <label>Lead Source Detail</label>
    <type>TextArea</type>
</CustomField>