SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/LeanData__Days_To_Close__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Days_To_Close__c</fullName>
    <formula>CloseDate - DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Close (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>