SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/LeanData__OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>LeanData__OrderNumber__c</fullName>
    <label>Order Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>