SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/LeanData__Reporting_Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_Last_Run_Date__c</fullName>
    <label>Reporting Last Run Date (Deprecated)</label>
    <type>DateTime</type>
</CustomField>