SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/LeanData__Reporting_Total_Marketing_Touches__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_Total_Marketing_Touches__c</fullName>
    <externalId>true</externalId>
    <label>Reporting Total Marketing Touches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>