SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/LeanData__Reporting_Won_Number__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_Won_Number__c</fullName>
    <label>Reporting Won Number (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>