SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Legal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is their legal contact?</inlineHelpText>
    <label>Customer Legal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Legal Contact)</relationshipLabel>
    <relationshipName>OpportunitiesB0h7</relationshipName>
    <type>Lookup</type>
</CustomField>