SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Legal_MSA_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_MSA_Name__c</fullName>
    <description>This field is &apos;Read Only&apos; and needs to be updated in CPQ</description>
    <label>Legal MSA Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>