SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Legal_Procurement_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Procurement_Date__c</fullName>
    <description>Date stage changed to legal/procurement</description>
    <label>Legal Procurement Date</label>
    <type>Date</type>
</CustomField>