SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Liability_Change__c.field-meta.xml
<CustomField>
    <fullName>Liability_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://launchdarkly.atlassian.net/wiki/spaces/Policy/pages/62554380/Compendium+of+Custom+Contracts</description>
    <inlineHelpText>https://launchdarkly.atlassian.net/wiki/spaces/Policy/pages/62554380/Compendium+of+Custom+Contracts</inlineHelpText>
    <label>Limitation of Liability Cap Changes</label>
    <type>Checkbox</type>
</CustomField>