SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Logo_Rights__c.field-meta.xml
<CustomField>
    <fullName>Logo_Rights__c</fullName>
    <label>Logo Rights</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>