SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Loss_description__c.field-meta.xml
<CustomField>
    <fullName>Loss_description__c</fullName>
    <description>Please provide more details about the loss.</description>
    <label>Loss Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>