SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Lost to homegrown</fullName>
            </value>
            <value>
                <fullName>No money</fullName>
                <label>No budget</label>
            </value>
            <value>
                <fullName>No decision</fullName>
                <label>Unresponsive</label>
            </value>
            <value>
                <fullName>Closed Not Now</fullName>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>