SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Lost_to_competitor__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_competitor__c</fullName>
    <label>Lost to Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors_FF</valueSetName>
    </valueSet>
</CustomField>