SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/M_LD_verbally_named_as_preferred_vendor__c.field-meta.xml
<CustomField>
    <fullName>M_LD_verbally_named_as_preferred_vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M. LD verbally named as preferred vendor</label>
    <type>Checkbox</type>
</CustomField>