SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes__c</fullName>
    <label>Manager Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>