SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Matches_Account_CSM__c.field-meta.xml
<CustomField>
    <fullName>Matches_Account_CSM__c</fullName>
    <formula>CS_Manager__c = Account.Customer_Success_Manager__c</formula>
    <label>Matches Account CSM</label>
    <type>Checkbox</type>
</CustomField>