SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/MAUs__c.field-meta.xml
<CustomField>
    <fullName>MAUs__c</fullName>
    <description>Monthly Active Users (MAUs) pulled from the Opportunity&apos;s Line Items. Note: If a custom MAU count, please select &apos;Custom Product&apos;.</description>
    <inlineHelpText>Monthly Active Users (MAUs) pulled from the Opportunity&apos;s Line Items. Note: If a custom MAU count, please select &apos;Custom Product&apos;.</inlineHelpText>
    <label>MAUs</label>
    <summarizedField>OpportunityLineItem.MAUs__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>