SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Max_Streaming_Connections__c.field-meta.xml
<CustomField>
    <fullName>Max_Streaming_Connections__c</fullName>
    <label>Max Streaming Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>