SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <description>Date meeting is scheduled</description>
    <label>1st Meeting Date</label>
    <type>Date</type>
</CustomField>