SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Meetings_Held__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Held__c</fullName>
    <formula>IF( X1st_Meeting_Happened__c = True &amp;&amp;  X2nd_Meeting_Happened__c = True, &quot;1st &amp; 2nd Meetings&quot;,  
IF( X1st_Meeting_Happened__c = True &amp;&amp; X2nd_Meeting_Happened__c = False, &quot;1st Meeting Only&quot;,
IF (X1st_Meeting_Happened__c = False &amp;&amp; X2nd_Meeting_Happened__c = True, &quot;2nd Meeting Only&quot;,
&quot;No Meetings&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meetings Held</label>
    <type>Text</type>
</CustomField>