SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Minimum_Start_Date_Product__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Start_Date_Product__c</fullName>
    <label>Minimum Start Date (Product)</label>
    <summarizedField>OpportunityLineItem.Start_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>