SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Mobile_MAUs__c.field-meta.xml
<CustomField>
    <fullName>Mobile_MAUs__c</fullName>
    <label>Mobile MAUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>