SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Most_Likely_Amount__c.field-meta.xml
<CustomField>
    <fullName>Most_Likely_Amount__c</fullName>
    <formula>IF(
  OR(ISPICKVAL(Forecast__c, &quot;Commit&quot;), 
     ISPICKVAL(Forecast__c, &quot;Most Likely&quot;)), Incremental_ARR__c , 

IF( AND(
    Contains(Text( StageName) ,&quot;Closed Won&quot;)),

    Incremental_ARR__c, 0)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Likely Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>