SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Most_Recent_Product_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Product_End_Date__c</fullName>
    <label>Product End Date</label>
    <summarizedField>OpportunityLineItem.End_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>