SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/MSA_missing__c.field-meta.xml
<CustomField>
    <fullName>MSA_missing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for if the MSA is missing so we can backfill as necessary</description>
    <label>MSA missing</label>
    <type>Checkbox</type>
</CustomField>