SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Mutual_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Plan_URL__c</fullName>
    <label>Mutual Plan URL</label>
    <type>Url</type>
</CustomField>