SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/N_Security_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>N_Security_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>N. Security Review Complete</label>
    <type>Checkbox</type>
</CustomField>