SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Needs_Modal_Clause__c.field-meta.xml
<CustomField>
    <fullName>Needs_Modal_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Need modal clause or DPA to be in place to be compliant with EU data laws.</description>
    <label>Needs Modal Clause</label>
    <type>Checkbox</type>
</CustomField>