SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/New_ACV_Bookings__c.field-meta.xml
<CustomField>
    <fullName>New_ACV_Bookings__c</fullName>
    <label>New ACV Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>