SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>