SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Number_of_Seats__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Seats__c</fullName>
    <description>Number of seats purchased</description>
    <inlineHelpText>Seat purchased for this opportunity. If Expansion, this would be ADDITIONAL seats.</inlineHelpText>
    <label>Number of Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>